--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
  <title>That's Boring</title>
  </head>
  <body>
- <h1>Old bro is watching u</h1>
+ <h1>Old bro is watching U</h1>
  </body>
 </html>
