--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
  <head>
  <meta charset='utf-8'>
- <title>That's Boring</title>
+ <title>Nice Day</title>
  </head>
  <body>
- <h1>Old bro is watching U</h1>
+ <h1>Good</h1>
  </body>
 </html>
