--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
  <body>
  <h1>Good</h1>
   <h2>Can you see it?</h2>
+ <p>
+  <img src="/pic/01.png" width="128" height="128" />
+ </p>
  </body>
 </html>
