--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
  <body>
  <h1>Good</h1>
   <h2>Can you see it?</h2>
+ <button type="button"
+ onclick="document.getElementById('demo').innerHTML = Date()">
+ 点击我来显示日期和时间
+ </button>
+ <p id="demo"></p>
  <p>
   <img src="/pic/01.png" width="1000" height="600" />
  </p>
