--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 function light(sw) {
   var pic;
   if (sw == 0) {
-    pic = "/i/eg_bulboff.gif"
+    pic = "/pic/eg_bulboff.gif"
   } else {
-    pic = "/i/eg_bulbon.gif"
+    pic = "/pic/eg_bulbon.gif"
   }
   document.getElementById('myImage').src = pic;
 }
 </script>
   
-<img id="myImage" src="/i/eg_bulboff.gif" width="109" height="180">
+<img id="myImage" src="/pic/eg_bulboff.gif" width="109" height="180">
 
 <p>
 <button type="button" onclick="light(1)">开灯</button>
