--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  onclick="document.getElementById('demo').innerHTML = Date()">
  点击我来显示日期和时间
  </button>
+ <p id="demo"></p>
   
  <script>
 function light(sw) {
